location service as lambda -> data is now in the body instead of url params

--- a/location-service/tsconfig.json
+++ b/location-service/tsconfig.json
@@ -13,5 +13,12 @@
     "resolveJsonModule": true
   },
   "compileOnSave": true,
-  "include": ["src"]
+  "include": [
+    "database.ts",
+    "index.ts",
+    "model.ts",
+    "paginate.ts",
+    "service.ts",
+    "types.ts"
+  ]
 }
