--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'frontend/**'
+      - "frontend/**"
   workflow_dispatch:
 
 env:
@@ -26,7 +26,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::897331788878:role/github_actions_role_v2
+          role-to-assume: arn:aws:iam::400638005080:role/github_actions_role_v2
           role-session-name: GitHubActionsS3
           aws-region: eu-central-1
 
