Updated checkout github action

--- a/.github/workflows/deploy_to_ghp.yml
+++ b/.github/workflows/deploy_to_ghp.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install jq
         run: sudo apt-get install jq
@@ -36,6 +36,7 @@ jobs:
         run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
+          echo "Set remote to: https://${github_token}@github.com/${repository}"
           git remote set-url origin https://${github_token}@github.com/${repository}
           npm run deploy
         env:
