--- a/email/package.json
+++ b/email/package.json
@@ -20,11 +20,13 @@
     "@react-email/render": "^0.0.7",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.0.3",
+    "mongoose": "^7.0.3",
     "react-email": "1.9.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
-    "@types/react": "^18.2.6"
+    "@types/react": "^18.2.6",
+    "@types/uuid": "^9.0.8"
   }
 }
