--- a/email/package.json
+++ b/email/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.0.3",
     "mongoose": "^7.0.3",
     "react-email": "1.9.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
