Adds .gitignore file
Adds a .gitignore file to exclude unnecessary files and directories from version control, such as environment files, node modules, build outputs, macOS system files, IDE configuration files, and temporary files. This prevents these files from being tracked by Git, keeping the repository clean and reducing its size.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,21 @@ frontend/.env
 notification/node_modules
 notification/dist
 notification/.env
+
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Wiki backups
+wiki-backup/
+wiki-temp/
+*.tar.gz
