Update frontend .gitignore to exclude local environment files
- Add patterns for .env.local and .env*.local files
- Prevent accidental commit of local environment configurations

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -14,6 +14,10 @@ dist/**
 dist-ssr
 *.local
 
+# Environment files
+.env.local
+.env*.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
