--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js --silent src/__tests__/",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "local": "npx tsc --watch & nodemon dist/index.js",
     "build": "tsc -p .",
     "docker-dev": "docker-compose -f docker-compose.dev.yml up -d",
@@ -32,6 +34,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.2.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
@@ -40,6 +43,7 @@
     "chalk": "^5.2.0",
     "haversine-distance": "^1.2.1",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^9.1.6",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
