fix: Add Terraform variable secrets to GitHub Actions workflows
Added TF_VAR_ environment variables to both dev and prod Terraform
workflows to pass required Terraform variables from GitHub Environment
secrets.

This fixes the issue where Terraform was stuck waiting for interactive
input for variables like api_key, auth_key, mongodb_connection_string,
and kita_api_url.

Changes:
- terraform-dev.yml: Added "Set Terraform Variables" step
- terraform-prod.yml: Added "Set Terraform Variables" step to both
  terraform-plan and terraform-apply jobs

Required secrets (added to dev environment):
- MONGODB_CONNECTION_STRING
- API_KEY
- AUTH_KEY
- KITA_API_URL

These secrets are automatically converted to TF_VAR_ environment
variables that Terraform recognizes.

--- a/.github/workflows/terraform-prod.yml
+++ b/.github/workflows/terraform-prod.yml
@@ -44,6 +44,13 @@ jobs:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: eu-central-1
 
+      - name: Set Terraform Variables
+        run: |
+          echo "TF_VAR_mongodb_connection_string=${{ secrets.MONGODB_CONNECTION_STRING }}" >> $GITHUB_ENV
+          echo "TF_VAR_api_key=${{ secrets.API_KEY }}" >> $GITHUB_ENV
+          echo "TF_VAR_auth_key=${{ secrets.AUTH_KEY }}" >> $GITHUB_ENV
+          echo "TF_VAR_kita_api_url=${{ secrets.KITA_API_URL }}" >> $GITHUB_ENV
+
       - name: Terraform Init
         run: terraform init
 
@@ -113,6 +120,13 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: eu-central-1
+
+      - name: Set Terraform Variables
+        run: |
+          echo "TF_VAR_mongodb_connection_string=${{ secrets.MONGODB_CONNECTION_STRING }}" >> $GITHUB_ENV
+          echo "TF_VAR_api_key=${{ secrets.API_KEY }}" >> $GITHUB_ENV
+          echo "TF_VAR_auth_key=${{ secrets.AUTH_KEY }}" >> $GITHUB_ENV
+          echo "TF_VAR_kita_api_url=${{ secrets.KITA_API_URL }}" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
