fix: Deployment workflow resource naming and Lambda upload method
Fixed two critical issues in deployment workflows:

1. Frontend Deployment (deploy_frontend_dev.yml)
   - Fixed S3 bucket name: kpz-dev-frontend → kpz-frontend-dev
   - Updated CloudFront distribution query to match correct bucket
   - Aligned with Terraform naming: kpz-frontend-${environment}

2. Backend Deployment (deploy_backend_dev.yml)
   - Changed from direct zip upload to S3-based deployment
   - Fixes "RequestEntityTooLargeException" (>70MB package)
   - Now uploads to S3 first, then updates Lambda from S3
   - Fixed Lambda function name: kpz-dev-backend-api → kpz-backend-api-dev
   - Aligned with Terraform naming: kpz-backend-api-${environment}

Backend deployment now:
1. Uploads lambda.zip to s3://kpz-terraform-state/lambda-deployments/
2. Creates timestamped backup and "latest" version
3. Updates Lambda function using --s3-bucket and --s3-key parameters

This allows deployment of Lambda packages larger than the 50MB direct upload limit.

--- a/.github/workflows/deploy_backend_dev.yml
+++ b/.github/workflows/deploy_backend_dev.yml
@@ -70,23 +70,34 @@ jobs:
           role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_ARN }}
           aws-region: eu-central-1
 
+      - name: Upload Lambda package to S3
+        run: |
+          # Upload to S3 (package is too large for direct Lambda upload)
+          aws s3 cp backend/lambda.zip s3://kpz-terraform-state/lambda-deployments/kpz-backend-api-dev-$(date +%Y%m%d-%H%M%S).zip \
+            --region eu-central-1
+
+          # Also upload as "latest" for the update command
+          aws s3 cp backend/lambda.zip s3://kpz-terraform-state/lambda-deployments/kpz-backend-api-dev-latest.zip \
+            --region eu-central-1
+
       - name: Update Lambda function
         run: |
           aws lambda update-function-code \
-            --function-name kpz-dev-backend-api \
-            --zip-file fileb://backend/lambda.zip \
+            --function-name kpz-backend-api-dev \
+            --s3-bucket kpz-terraform-state \
+            --s3-key lambda-deployments/kpz-backend-api-dev-latest.zip \
             --region eu-central-1
 
       - name: Wait for Lambda update to complete
         run: |
           aws lambda wait function-updated \
-            --function-name kpz-dev-backend-api \
+            --function-name kpz-backend-api-dev \
             --region eu-central-1
 
       - name: Verify deployment
         run: |
           aws lambda get-function \
-            --function-name kpz-dev-backend-api \
+            --function-name kpz-backend-api-dev \
             --region eu-central-1 \
             --query 'Configuration.[FunctionName,LastModified,State]' \
             --output table
@@ -94,6 +105,6 @@ jobs:
       - name: Deployment summary
         run: |
           echo "✅ Backend deployed to AWS Lambda (dev)"
-          echo "Function: kpz-dev-backend-api"
+          echo "Function: kpz-backend-api-dev"
           echo "Region: eu-central-1"
           echo "API Gateway: https://q53a8x2xfl.execute-api.eu-central-1.amazonaws.com"
