--- a/.github/workflows/deploy_frontend_dev.yml
+++ b/.github/workflows/deploy_frontend_dev.yml
@@ -52,14 +52,14 @@ jobs:
 
       - name: Sync to S3 bucket
         run: |
-          aws s3 sync frontend/dist/ s3://kpz-dev-frontend/ \
+          aws s3 sync frontend/dist/ s3://kpz-frontend-dev/ \
             --delete \
             --cache-control "public,max-age=31536000,immutable" \
             --exclude "*.html" \
             --region eu-central-1
 
           # HTML files with short cache (for SPA routing)
-          aws s3 sync frontend/dist/ s3://kpz-dev-frontend/ \
+          aws s3 sync frontend/dist/ s3://kpz-frontend-dev/ \
             --exclude "*" \
             --include "*.html" \
             --cache-control "public,max-age=0,must-revalidate" \
@@ -69,7 +69,7 @@ jobs:
         id: cloudfront
         run: |
           DISTRIBUTION_ID=$(aws cloudfront list-distributions \
-            --query "DistributionList.Items[?Origins.Items[?DomainName=='kpz-dev-frontend.s3.eu-central-1.amazonaws.com']].Id | [0]" \
+            --query "DistributionList.Items[?Origins.Items[?DomainName=='kpz-frontend-dev.s3.eu-central-1.amazonaws.com']].Id | [0]" \
             --output text \
             --region eu-central-1)
           echo "distribution_id=$DISTRIBUTION_ID" >> $GITHUB_OUTPUT
@@ -85,7 +85,7 @@ jobs:
       - name: Deployment summary
         run: |
           echo "✅ Frontend deployed to S3/CloudFront (dev)"
-          echo "S3 Bucket: kpz-dev-frontend"
+          echo "S3 Bucket: kpz-frontend-dev"
           echo "CloudFront Distribution: ${{ steps.cloudfront.outputs.distribution_id }}"
           echo "Region: eu-central-1"
           echo ""
