--- a/scraper/package.json
+++ b/scraper/package.json
@@ -18,5 +18,8 @@
     "dotenv": "^16.4.5",
     "mongoose": "^8.3.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "esbuild": "^0.27.2"
   }
 }
