fix: Disable production Terraform workflow until prod environment exists
The production Terraform workflow was failing because the
terraform/environments/prod/ directory is empty (no main.tf).
Added 'if: false' condition to both jobs to skip execution
until production environment is configured.

To re-enable: Remove the 'if: false &&' condition when
terraform/environments/prod/main.tf exists.

--- a/.github/workflows/terraform-prod.yml
+++ b/.github/workflows/terraform-prod.yml
@@ -23,7 +23,9 @@ jobs:
   terraform-plan:
     runs-on: ubuntu-latest
     environment: prod
-    if: github.event_name == 'pull_request'
+    # Skip this job until production environment is configured
+    # Remove this condition when terraform/environments/prod/main.tf exists
+    if: false && github.event_name == 'pull_request'
 
     defaults:
       run:
@@ -100,7 +102,9 @@ jobs:
     environment:
       name: prod
       # Requires manual approval before deployment
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    # Skip this job until production environment is configured
+    # Remove this condition when terraform/environments/prod/main.tf exists
+    if: false && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
 
     defaults:
       run:
